--- a/OpenJio/OpenJio/Base.lproj/Main.storyboard
+++ b/OpenJio/OpenJio/Base.lproj/Main.storyboard
@@ -225,7 +225,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="PO8-AG-0bQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="476" y="2543"/>
+            <point key="canvasLocation" x="3512" y="3335"/>
         </scene>
         <!--Interested Match View Controller-->
         <scene sceneID="2do-6o-7Zq">
@@ -282,7 +282,68 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="1La-Qr-JAX" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1526.25" y="2542.605633802817"/>
+            <point key="canvasLocation" x="1950" y="2448"/>
+        </scene>
+        <!--Match View Controller-->
+        <scene sceneID="Ro2-TC-1Ap">
+            <objects>
+                <viewController id="L1O-eD-Ld1" customClass="MatchViewController" customModule="OpenJio" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="lj1-Kn-3gx"/>
+                        <viewControllerLayoutGuide type="bottom" id="5wH-Sq-B4N"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="Ryx-cX-uDi">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="Od9-7M-I2z">
+                                <rect key="frame" x="16" y="72" width="288" height="29"/>
+                                <segments>
+                                    <segment title="Successful"/>
+                                    <segment title="New"/>
+                                </segments>
+                                <connections>
+                                    <action selector="segmentedControl:" destination="L1O-eD-Ld1" eventType="valueChanged" id="x4H-r2-rDP"/>
+                                </connections>
+                            </segmentedControl>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" rowHeight="44" sectionHeaderHeight="18" sectionFooterHeight="18" translatesAutoresizingMaskIntoConstraints="NO" id="nli-1p-Dwi">
+                                <rect key="frame" x="0.0" y="108" width="320" height="411"/>
+                                <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" id="8WR-so-jeK">
+                                        <rect key="frame" x="0.0" y="56" width="320" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="8WR-so-jeK" id="OA5-PE-4Hs">
+                                            <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="L1O-eD-Ld1" id="vp6-TU-DpU"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="Od9-7M-I2z" firstAttribute="trailing" secondItem="Ryx-cX-uDi" secondAttribute="trailingMargin" id="C4m-vT-G7M"/>
+                            <constraint firstItem="5wH-Sq-B4N" firstAttribute="top" secondItem="nli-1p-Dwi" secondAttribute="bottom" id="RAA-1k-G6C"/>
+                            <constraint firstItem="nli-1p-Dwi" firstAttribute="leading" secondItem="Ryx-cX-uDi" secondAttribute="leading" id="XFD-St-AC0"/>
+                            <constraint firstItem="Od9-7M-I2z" firstAttribute="top" secondItem="lj1-Kn-3gx" secondAttribute="bottom" constant="8" id="Yfk-eK-2V9"/>
+                            <constraint firstItem="nli-1p-Dwi" firstAttribute="top" secondItem="Od9-7M-I2z" secondAttribute="bottom" constant="8" id="frF-co-UWG"/>
+                            <constraint firstItem="Od9-7M-I2z" firstAttribute="leading" secondItem="Ryx-cX-uDi" secondAttribute="leadingMargin" id="wkn-aJ-Zu2"/>
+                            <constraint firstAttribute="trailing" secondItem="nli-1p-Dwi" secondAttribute="trailing" id="yUC-TN-53t"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="kf8-4Z-0bS"/>
+                    <connections>
+                        <outlet property="segmentedControl" destination="Od9-7M-I2z" id="RTk-0P-Obq"/>
+                        <outlet property="tableView" destination="nli-1p-Dwi" id="bug-UQ-bpO"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="CP9-9J-BHd" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1950" y="1728"/>
         </scene>
         <!--Matches Table View Controller-->
         <scene sceneID="cTF-go-vqB">
@@ -297,7 +358,7 @@
                                 <rect key="frame" x="0.0" y="28" width="320" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="r8y-hB-jf9" id="lbE-rn-FbT">
-                                    <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                 </tableViewCellContentView>
                             </tableViewCell>
@@ -315,7 +376,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="vOV-mM-o1f" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="973" y="1730"/>
+            <point key="canvasLocation" x="538" y="2636"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="QOc-qL-6C9">
@@ -329,7 +390,7 @@
                     </tabBar>
                     <connections>
                         <segue destination="4ib-C5-FpO" kind="relationship" relationship="viewControllers" id="leK-CI-0C0"/>
-                        <segue destination="9md-r6-iPO" kind="relationship" relationship="viewControllers" id="bBQ-9R-Idh"/>
+                        <segue destination="9md-r6-iPO" kind="relationship" relationship="viewControllers" id="wkL-2l-KwS"/>
                         <segue destination="6zn-Us-c5e" kind="relationship" relationship="viewControllers" id="pCQ-vp-kbL"/>
                     </connections>
                 </tabBarController>
@@ -373,7 +434,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="sEK-x4-rAP" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2083" y="1731"/>
+            <point key="canvasLocation" x="2910" y="1730"/>
         </scene>
         <!--Settings-->
         <scene sceneID="NyD-uk-dYY">
@@ -392,7 +453,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="HTb-d2-eaD" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2084" y="902"/>
+            <point key="canvasLocation" x="2910" y="873"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="LZ0-tX-nxt">
@@ -447,7 +508,26 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="j9Q-Vi-FEt" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="973" y="873"/>
+            <point key="canvasLocation" x="-300" y="2636"/>
+        </scene>
+        <!--Matches-->
+        <scene sceneID="SJY-sS-rxe">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="I4j-PN-LGP" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Matches" image="HeartIcon" id="P6c-YO-M5g"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="A8j-vM-Gcw">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="L1O-eD-Ld1" kind="relationship" relationship="rootViewController" id="dII-yR-u3c"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Yr9-qw-Npb" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1950" y="873"/>
         </scene>
     </scenes>
     <resources>
